# burn-playground

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: data.rs  main.rs  model.rs  training.rs
