[package]
name = "burn-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = {
    version = "~0.21",
    features = ["std", "tui", "train", "vision", "flex"],
    default-features = false
}
burn-backend = { version = "~0.21", default-features = false }
burn-autodiff = { version = "~0.21", default-features = false }
rand = "~0.10.1"
log = "~0.4.29"

[features]
default = ["burn/default", "burn/tui"]
flex = ["burn/flex"]
tch-cpu = ["burn/tch"]
tch-gpu = ["burn/tch"]
wgpu = ["burn/wgpu"]
metal = ["burn/metal"]
cuda = ["burn/cuda"]
vulkan = ["burn/vulkan"]
rocm = ["burn/rocm"]
